# Ncc-Risk-Evacuation

./: Makefile  README.md  pyproject.toml
data/: nccs.xlsx
ncc_risk_detector/: contract_parser.py  main.py  matcher.py  matcher_llama.py  matcher_nli.py  ncc_processor.py  report_generator.py
output/: results.json  results_llama.json  summary.txt  summary_llama.txt
